--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "express": "^4.10.0",
     "express3-handlebars": "^0.5.2",
     "nodemon": "^1.2.1"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "mocha": "^2.0.1"
   }
 }
