--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "devDependencies": {
     "chai": "^1.9.2",
+    "gulp": "^3.8.9",
+    "gulp-jshint": "^1.8.5",
+    "gulp-mocha": "^1.1.1",
+    "jshint-stylish": "^1.0.0",
     "mocha": "^2.0.1",
     "zombie": "^2.1.1"
   }
