--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "meadowlark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon meadowlark.js",
+    "start": "nodemon meadowlark.js --ext js,handlebars --ignore gulpfile.js",
     "qa": "mocha -u tdd -R spec qa/tests-crosspage.js"
   },
   "repository": {
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/shgtkshruch/web-development-with-node-and-express",
   "dependencies": {
     "express": "^4.10.0",
-    "express3-handlebars": "^0.5.2",
-    "nodemon": "^1.2.1"
+    "express3-handlebars": "^0.5.2"
   },
   "devDependencies": {
+    "nodemon": "^1.2.1",
     "chai": "^1.9.2",
     "gulp": "^3.8.9",
     "gulp-jshint": "^1.8.5",
